--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,4 @@ script:
   - cd $HOME/gopath/src/github.com/miekg/exdns/chaos; go build
   - cd $HOME/gopath/src/github.com/miekg/exdns/check-soa; go build
   - cd $HOME/gopath/src/github.com/miekg/exdns/reflect; go build
+  - cd $HOME/gopath/src/github.com/miekg/exdns/resolver-query; go build
